# freesia-mapping

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
doc/: usage.md
freesia/: assets.qrc  brainregionmodel.cpp  brainregionmodel.h  brainregionpanel.cpp  brainregionpanel.h  common.cpp  common.h  contrastadjuster.cpp  contrastadjuster.h  controlpanel.cpp  controlpanel.h  dependencies.pri.tmpl  freesia.pro  imagewriter.cpp  imagewriter.h  importexportdialog.cpp  importexportdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  menubar.cpp  menubar.h  sectionviewer.cpp  sectionviewer.h  stackslider.cpp  stackslider.h  statusbar.cpp  statusbar.h  viewerpanel.cpp  viewerpanel.h  volumeviewer.cpp  volumeviewer.h
freesia/assets/: style.css
